# macos-c-debugger-rust

./: Cargo.toml  Makefile  README.md  debugger-entitlements.plist
samples/: hello  hello.c  sleep  sleep.c  threads  threads.c
samples/hello.dSYM/Contents/Resources/DWARF/: hello
samples/hello.dSYM/Contents/Resources/Relocations/aarch64/: hello.yml
samples/hello.dSYM/Contents/Resources/Relocations/x86_64/: hello.yml
samples/sleep.dSYM/Contents/Resources/DWARF/: sleep
samples/sleep.dSYM/Contents/Resources/Relocations/aarch64/: sleep.yml
samples/sleep.dSYM/Contents/Resources/Relocations/x86_64/: sleep.yml
samples/threads.dSYM/Contents/Resources/DWARF/: threads
samples/threads.dSYM/Contents/Resources/Relocations/x86_64/: threads.yml
src/: arch.rs  breakpoint.rs  debugger.rs  disasm.rs  expr.rs  expr_grammar.lalrpop  leak_tracker.rs  mach.rs  main.rs  ptrace.rs  register.rs  stub_finder.rs  symbols.rs
